fixed context panel text colors, light and dark, for clearer legibility while still maintaining hover styles

--- a/app/sass/_context_panel.sass
+++ b/app/sass/_context_panel.sass
@@ -518,7 +518,7 @@
       border: 1px solid #111
       +pointer
     .context
-      color: #444
+      color: #222
       +shine-light-alpha(16)
       &:hover
         color: #000
@@ -635,6 +635,10 @@
       border: 1px solid #333
       &:hover
         +button-dark
+    .context
+      color: #ccc
+      &:hover
+        color: #fff
 
 
     .relation
